--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -399,7 +399,7 @@ Im Menü *Einrichtung » Märkte » Amazon » Berichte » Berichte anfordern* ka
 
 * Der Zeitraum, über den du Berichte anfordern willst, darf maximal eine Woche sein.
 
-* Berichte können nicht beliebig oft angefordert werden. Einige Berichtstypen können beispielsweise nur 2- oder 5-mal pro Woche angefordert werden.
+* Berichte können nicht beliebig oft angefordert werden. Einige Berichtstypen können beispielsweise nur 2- oder 5-mal pro Tag angefordert werden.
 
 [.instruction]
 Bericht anfordern:
@@ -432,7 +432,7 @@ Bericht anfordern:
 
 | *Berichtstyp*
 | Berichtstyp wählen. Wenn du mit der Maus auf einen Berichtstyp in der Dropdown-Liste zeigst, wird ein Tooltip mit Informationen zu diesem Berichtstyp angezeigt. +
-*_Hinweis:_* Berichte können nicht beliebig oft angefordert werden. Wenn du den Berichtstyp gewählt hast, wird dir darunter angezeigt, wie oft pro Woche du einen Bericht dieses Typs anfordern kannst. 
+*_Hinweis:_* Berichte können nicht beliebig oft angefordert werden. Wenn du den Berichtstyp gewählt hast, wird dir darunter angezeigt, wie oft pro Tag du einen Bericht dieses Typs anfordern kannst. 
 |===
 
 [#2700]
