--- a/docs/de-de/modules/automatisierung/pages/document-builder.adoc
+++ b/docs/de-de/modules/automatisierung/pages/document-builder.adoc
@@ -362,9 +362,7 @@ In diesem Widget kannst du Text eingeben und Variablen verwenden. Du hast auch d
 (Nicht aufzählen, nur als Info)
 verfügbare Formatierungen:
 bold, italic, underlined
-font (size & family) ??
+font (size & family) ..was bedeutet das??
 alignment (left, right, centered)
 numbering and listing (bullet points and 1, 2, 3...)
-Nice to have (if it is there, add it): _ask Kevin whether this is available - depends on the ShopBuilder_
 font colour and highlighting in colour
-spacing (between lines; paragraphs)
