--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -5,7 +5,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 16.05.2022
+zuletzt bearbeitet 21.10.2022
 ////
 
 Preise sind ein wichtiges Thema für jedes Geschäft.
@@ -24,6 +24,7 @@ Beispielsweise startest du mit dem Einkaufspreis des Artikels und fügst dann di
 
 Verkaufspreise definieren die Bedingungen, unter denen eine Variante zu einem bestimmten Preis verkauft wird.
 Zum Beispiel kannst du deine Produkte im plentyShop günstiger anbieten als auf Amazon. Oder du kannst deine Produkte günstiger an B2B-Kunden verkaufen als an B2C-Kunden.
+
 Neue plentymarkets Systeme sind mit zwei Standard-Verkaufspreisen ausgestattet.
 Wirf bei Bedarf einen Blick auf diese Standard-Verkaufspreise und nutze sie, um dich mit dem Thema vertraut zu machen.
 Es steht dir frei, die Standard-Verkaufspreise zu ändern und/oder völlig neue Verkaufspreise zu erstellen.
@@ -33,32 +34,30 @@ video::265406117[vimeo]
 [#200]
 === Neue Verkaufspreise erstellen
 
-In plentymarkets werden Verkaufspreise zentral angelegt und verwaltet.
-Entweder kannst du neue Verkaufspreise mit Hilfe eines Assistenten erstellen oder du kannst neue Verkaufspreise manuell im Einrichtungsmenü erstellen.
-
-[tabs]
-====
-Im Einrichtungsmenü::
-+
---
 Erstelle beliebig viele Verkaufspreise, um die gesamte Breite deiner benötigten Preise in plentymarkets abzubilden.
 Während des Prozesses vergibst du den Verkaufspreisen eindeutige Namen und entscheidest, für welche Währungen, Kundenklassen, Marktplätze, oder andere Bedingungen sie gelten sollen.
+
+[WARNING]
+.Fehler durch doppelte Verkaufspreise
+====
+Lege nicht mehrere Verkaufspreise mit exakt denselben Bedingungen an.
+Dies führt zu Fehlern.
+
+* *_Beispiel_*: Du hast zwei Verkaufspreise, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten.
+* *_Auswirkung_*: plentymarkets weiß nicht, welcher Verkaufspreis verwendet werden soll.
+plentymarkets verwendet zufällig einen der beiden Verkaufspreise, da beide gleichermaßen gelten.
+====
+
+==== Im Einrichtungsmenü
 
 . Öffne das Menü *Einrichtung » Artikel » Verkaufspreise*.
 . Klicke auf icon:plus[role="green"] *Neu*. +
 → Das Tab *Neu* wird geöffnet.
-. Nimm die Einstellungen vor. Beachte <<table-create-sales-price>>.
+. Nimm die Einstellungen vor. Beachte die Tabelle.
 . *Speichere* (terra:save[role="green"]) die Einstellungen.
-. Anschließend werden die fertige xref:artikel:preise.adoc#900[Verkaufspreise mit einzelnen Varianten verknüpft].
+. Anschließend xref:artikel:preise.adoc#900[verknüpfst] du die fertige Verkaufspreise mit einzelnen Varianten.
 
-IMPORTANT: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
-Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
-plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
-
-
-[[table-create-sales-price]]
-.Verkaufspreis erstellen
-[cols="1,3"]
+[cols="1,4a"]
 |===
 |Einstellung |Erläuterung
 
@@ -76,7 +75,7 @@ Die ID kann nicht geändert werden.
 Wenn du mehrere xref:artikel:preise.adoc#900[Verkaufspreise mit einer Variante verknüpfst], dann werden die Verkaufspreise anhand ihrer Positionsnummer im Artikeldatensatz sortiert angezeigt.
 
 | *Interner Name DE*
-|Gib einen Namen für den Verkaufspreis ein.
+|Gib einen internen Namen für den Verkaufspreis ein.
 Dieser Name wird an verschiedenen Stellen innerhalb deines plentymarkets Backends angezeigt. Du wählst z.B. den Verkaufspreis anhand seines Namens, wenn du xref:artikel:preise.adoc#900[ihn mit einzelnen Artikeln verknüpfst].
 
 | *Externer Name DE*
@@ -87,9 +86,12 @@ Das heißt: Es gibt derzeit keine Option im ShopBuilder-Widget, mit der du den e
 Wenn du den externen Namen im plentyShop anzeigen möchtest, musst du den Code des Webshops entsprechend anpassen.
 
 | *Ab Menge*
-|Sollte der Verkaufspreis nur gelten, wenn ein Kunde mehrere Exemplare des Artikels kauft?
-Nehmen wir zum Beispiel an, du verkaufst Socken für 6 EUR pro Paar. Möchtest du, dass der Preis auf 5 EUR pro Paar reduziert wird, wenn ein Kunde 3 oder mehr Paar Socken kauft?
-Falls ja, dann gib die Menge an, für die dieser Verkaufspreis gilt.
+|Soll der Verkaufspreis nur gelten, wenn ein Kunde mehrere Exemplare des Artikels kauft?
+Beispiel: du verkaufst Socken für 6 EUR pro Paar.
+Soll der Preis auf 5 EUR pro Paar reduziert werden, wenn ein Kunde 3 oder mehr Paar Socken kauft?
+Falls ja, dann gib die Menge an, für die der Verkaufspreis gilt.
+
+---
 
 *_Tipp_*: Füge noch weitere mengenabhängige Verkaufspreise hinzu, um eine Preisstaffel nach Mengen zu erstellen.
 
@@ -102,6 +104,8 @@ Stelle sicher, dass die Einstellung *Mengenrabatt* auf *berücksichtigen* gesetz
 |Für welche Währungen soll der Verkaufspreis gelten?
 Wähle sie aus der Liste aus (icon:check-square[role="blue"]).
 
+---
+
 *_Hintergrund-Info_*: Während du dein plentyShop konfigurierst, kannst du entscheiden, in welchen xref:webshop:ceres-einrichten.adoc#220[Sprachen] und xref:webshop:ceres-einrichten.adoc#201[Währungen] dein Shop zugänglich sein soll.
 Nehmen wir zum Beispiel an, dass Kunden die Währungen EUR, PLN, CHF und GBP aus der Kopfzeile wählen können.
 Dann wäre es sinnvoll, Preise auch für diese Währungen zu speichern.
@@ -112,24 +116,26 @@ Wenn du diese Option nicht aktivierst, werden deine Preise alle die gleiche Zahl
 Vergewissere dich, dass du mit den im Menü *Einrichtung » Aufträge » Zahlung » Währungen* gespeicherten xref:payment:waehrungen.adoc#20[Umrechnungsfaktoren] einverstanden bist.
 
 | *Preistyp*
-|Welche Art von Verkaufspreis möchtest du konfigurieren? In den meisten Fällen wirst du einen Standard-Verkaufspreis anlegen.
-
+|Welche Art von Verkaufspreis möchtest du konfigurieren?
+In den meisten Fällen wirst du einen Standard-Verkaufspreis anlegen.
 Aber in manchen Situationen willst du vielleicht stattdessen ein "UVP", "Setpreis" oder "Aktionspreis" erstellen.
 Falls ja, dann wähle den entsprechenden Preistyp (icon:check-square[role="blue"]).
 
-*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis im plentyShop darzustellen.
+---
+
+* *UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis im plentyShop darzustellen.
 Produkte können nicht zu dem UVP-Preis verkauft werden.
 Damit der UVP im plentyShop angezeigt werden kann, muss die Variante mit dem UVP-Preis und dem Standardpreis verknüpft sein.
 Außerdem muss der UVP-Preis höher als der Standardpreis sein.
 Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt.
 
-*Aktionspreis* = Ein Angebotspreis, der z.B. bei Google Shopping gilt.
+* *Aktionspreis* = Ein Angebotspreis, der z.B. bei Google Shopping gilt.
 Der Google Shopping Feed enthält die Felder "price" und "sales_price".
 Das Feld "price" ist ein regulärer Verkaufspreis, d.h. kein Preistyp.
 Das Feld "sales_price" ist ein Aktionspreis.
 Der Aktionspreis wird nur dann im Feed ausgegeben, wenn er niedriger als der Verkaufspreis ist.
 
-*Setpreis* = xref:artikel:multipacks-pakete-sets.adoc#3000[Sets] sind eine Möglichkeit, Produkte zu kombinieren und als eine Verkaufseinheit anzubieten. Wenn du dich entscheidest, Produkte zu einem Set zu kombinieren, dann musst du den einzelnen Set-Bestandteilen einen Setpreis geben.
+* *Setpreis* = xref:artikel:multipacks-pakete-sets.adoc#3000[Sets] sind eine Möglichkeit, Produkte zu kombinieren und als eine Verkaufseinheit anzubieten. Wenn du dich entscheidest, Produkte zu einem Set zu kombinieren, dann musst du den einzelnen Set-Bestandteilen einen Setpreis geben.
 
 | *Darstellung*
 |Soll dieser Verkaufspreis automatisch mit neuen Artikeldatensätzen verknüpft werden?
@@ -138,14 +144,16 @@ Falls ja, dann aktiviere die Option *Bei neuem Artikel immer anzeigen* (icon:che
 Wenn diese Einstellung deaktiviert ist, kannst du den xref:artikel:preise.adoc#900[Verkaufspreis trotzdem manuell zu Artikeln hinzufügen].
 
 | *Mandant*
-|Soll der Verkaufspreis nur für bestimmte Mandanten (Shops) gelten? Falls ja, dann wähle alle Shops (icon:check-square[role="blue"]), für die dieser Verkaufspreis gelten soll.
+|Soll der Verkaufspreis nur für bestimmte Mandanten (Shops) gelten? Falls ja, dann wähle alle Shops (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
 *_Hintergrund-Info_*: Mit plentymarkets kannst du mehrere Webshops, d.h. xref:webshop:mandanten-verwalten.adoc#[mehrere Mandanten], mit nur einer Software verwalten. Somit ist es möglich, über ein plentymarkets System mehrere unterschiedliche Geschäftsbereiche zu realisieren.
 Das ist ein großer Vorteil. Aber es bedeutet auch, dass du plentymarkets immer mitteilen musst, für welchen Webshop der Verkaufspreis gilt.
 
 | *Klasse*
 |Soll der Verkaufspreis nur für bestimmte Kundenklassen gelten? Willst du z.B. deine Produkte günstiger an B2B-Kunden verkaufen als an B2C-Kunden?
-Falls ja, dann wähle alle Kundenklassen (icon:check-square[role="blue"]), für die dieser Verkaufspreis gilt.
+Falls ja, dann wähle alle Kundenklassen (icon:check-square[role="blue"]), für die der Verkaufspreis gilt.
+
+---
 
 *_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
 Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
@@ -154,12 +162,14 @@ plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide
 *_Hinweis_*: xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
 
 | *Land*
-|Soll der Verkaufspreis nur für bestimmte Lieferländer gelten? Beispielsweise zahlst du wahrscheinlich unterschiedliche Steuersätze in unterschiedlichen Ländern. Aus diesem Grund willst du vielleicht einen Artikel in einigen Ländern zu einem etwas höheren Preis verkaufen, damit du die Differenz nicht selbst bezahlen musst.
-Wähle alle Länder (icon:check-square[role="blue"]), für die dieser Verkaufspreis gelten soll.
+|Soll der Verkaufspreis nur für bestimmte Lieferländer gelten?
+Beispiel: du zahlst unterschiedliche Steuersätze in unterschiedlichen Ländern.
+Aus diesem Grund willst du einen Artikel in einigen Ländern zu einem etwas höheren Preis verkaufen, damit du die Differenz nicht selbst bezahlen musst.
+Wähle alle Länder (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
 | *Herkunft*
 |Soll der Verkaufspreis nur für bestimmte Verkaufskanäle gelten? Möchtest du zum Beispiel den Artikel zu einem niedrigeren Preis in deinem plentyShop verkaufen als auf Amazon?
-Wähle alle Plattformen (icon:check-square[role="blue"]), für die dieser Verkaufspreis gelten soll.
+Wähle alle Plattformen (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
 *_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
 Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
@@ -180,62 +190,63 @@ xref:maerkte:ebay-einrichten.adoc#[Verknüpfe also im Voraus dein eBay-Konto mit
 
 Diese Einstellung ist ausgegraut, bis du eine eBay-Plattform aus der Liste weiter oben auswählst.
 |===
---
 
-Mit dem Assistenten::
-+
---
-Mit Hilfe des Assistenten kannst du auf einfache Weise neue Verkaufspreise erstellen.
-Der Assistent führt dich durch die gängigsten Einstellungen.
-Während des Prozesses vergibst du den Verkaufspreisen eindeutige Namen und entscheidest, für welche Währungen, Kundenklassen, Marktplätze, oder andere Bedingungen sie gelten sollen.
-Es gibt auch einige erweiterte Einstellungen, die optional auch im Anschluß konfiguriert werden können.
+==== Mit dem Assistenten
 
 . Öffne das Menü *Einrichtung » Assistenten » Grundeinrichtung*.
-. Klicke auf den Verkaufspreise-Assistenten.
+. Klicke auf den Assistenten *Verkaufspreise*.
 . Klicke auf *Neue Konfiguration* (icon:plus[role="darkGrey"]).
-. Folge den Anweisungen auf dem Bildschirm. Beachte <<table-sales-price-assistant>>, wenn du zusätzliche Informationen zu einer der Optionen benötigst.
-. Überprüfe die Zusammenfassung auf mögliche Fehler und klicke auf icon:check[role="green"] *Abschließen*. +
-→ Der Assistent ist fertig. Wiederhole diese Schritte, bis du alle von deinem Unternehmen benötigten Verkaufspreise erstellt hast.
-. Anschließend werden die fertige xref:artikel:preise.adoc#900[Verkaufspreise mit einzelnen Varianten verknüpft].
+. Der Assistent ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
+. Überprüfe in Schritt *Zusammenfassung* deine gewählten Einstellungen und klicke auf icon:check[role="green"] *Abschliessen*. +
+→ Der Assistent ist fertig.
+Wiederhole die Schritte, bis du alle von deinem Unternehmen benötigten Verkaufspreise erstellt hast.
+. Anschließend xref:artikel:preise.adoc#900[verknüpfst] du die fertige Verkaufspreise mit einzelnen Varianten.
 
-IMPORTANT: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
-Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
-plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
+[.collapseBox]
+.*Schritt: Einstellungen*
+--
 
-[[table-sales-price-assistant]]
-.Verkaufspreis erstellen
-[cols="1,3"]
+[cols="1,4a"]
 |===
 |Einstellung |Erläuterung
-
-2+^| *Schritt: Einstellungen*
 
 | *Typ*
 |Welche Art von Verkaufspreis möchtest du konfigurieren?
 
-In den meisten Fällen wirst du einen Standard-Verkaufspreis anlegen.
-Aber in manchen Situationen willst du vielleicht stattdessen ein "UVP", "Setpreis" oder "Aktionspreis" erstellen.
-Falls ja, dann aktiviere diese Option (icon:toggle-on[role="blue"]).
-Ein zusätzlicher Konfigurationsschritt wird eingeblendet. In diesem Schritt legst du die Art des zu erstellenden Verkaufspreises fest.
+icon:toggle-off[role="darkGrey"] = Es handelt sich um einen Standard-Verkaufspreis.
+Der zusätzliche Konfigurationsschritt *Typ* wird ausgeblendet, da er für Standardpreise nicht relevant ist.
 
-*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis im plentyShop darzustellen.
+icon:toggle-on[role="blue"] = Es handelt sich um einen "UVP", "Setpreis" oder "Aktionspreis".
+Der zusätzliche Konfigurationsschritt *Typ* wird eingeblendet.
+
+---
+
+* *UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis im plentyShop darzustellen.
 Produkte können nicht zu dem UVP-Preis verkauft werden.
 Damit der UVP im plentyShop angezeigt werden kann, muss die Variante mit dem UVP-Preis und dem Standardpreis verknüpft sein.
 Außerdem muss der UVP-Preis höher als der Standardpreis sein.
 Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt.
 
-*Aktionspreis* = Ein Angebotspreis, der z.B. bei Google Shopping gilt.
+* *Aktionspreis* = Ein Angebotspreis, der z.B. bei Google Shopping gilt.
 Der Google Shopping Feed enthält die Felder "price" und "sales_price".
 Das Feld "price" ist ein regulärer Verkaufspreis, d.h. kein Preistyp.
 Das Feld "sales_price" ist ein Aktionspreis.
 Der Aktionspreis wird nur dann im Feed ausgegeben, wenn er niedriger als der Verkaufspreis ist.
 
-*Setpreis* = xref:artikel:multipacks-pakete-sets.adoc#3000[Sets] sind eine Möglichkeit, Produkte zu kombinieren und als eine Verkaufseinheit anzubieten. Wenn du dich entscheidest, Produkte zu einem Set zu kombinieren, dann musst du den einzelnen Set-Bestandteilen einen Setpreis geben.
+* *Setpreis* = xref:artikel:multipacks-pakete-sets.adoc#3000[Sets] sind eine Möglichkeit, Produkte zu kombinieren und als eine Verkaufseinheit anzubieten. Wenn du dich entscheidest, Produkte zu einem Set zu kombinieren, dann musst du den einzelnen Set-Bestandteilen einen Setpreis geben.
 
 | *Kundenklassen*
-|Soll der Verkaufspreis nur für bestimmte Kundenklassen gelten? Willst du z.B. deine Produkte günstiger an B2B-Kunden verkaufen als an B2C-Kunden?
-Falls ja, dann aktiviere diese Option (icon:toggle-on[role="blue"]).
-Ein zusätzlicher Konfigurationsschritt wird eingeblendet. In diesem Schritt gibst du die Kundenklasse an, für die dieser Verkaufspreis gilt.
+|Soll der Verkaufspreis nur für bestimmte Kundenklassen gelten?
+Willst du z.B. deine Produkte günstiger an B2B-Kunden verkaufen als an B2C-Kunden?
+
+icon:toggle-off[role="darkGrey"] = Der Verkaufspreis soll für keine bestimmte Kundenklassen gelten.
+Der zusätzliche Konfigurationsschritt *Kundenklasse* wird ausgeblendet, da er nicht relevant ist.
+
+icon:toggle-on[role="blue"] = Der Verkaufspreis soll nur für bestimmte Kundenklassen gelten.
+Der zusätzliche Konfigurationsschritt *Kundenklasse* wird eingeblendet.
+In diesem Schritt gibst du die Kundenklasse an, für die der Verkaufspreis gilt.
+
+---
 
 *_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
 Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
@@ -244,10 +255,18 @@ plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide
 *_Hinweis_*: xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
 
 | *Mengenabhängigkeit*
-|Sollte der Verkaufspreis nur gelten, wenn ein Kunde mehrere Exemplare des Artikels kauft?
-Nehmen wir zum Beispiel an, du verkaufst Socken für 6 EUR pro Paar. Möchtest du, dass der Preis auf 5 EUR pro Paar reduziert wird, wenn ein Kunde 3 oder mehr Paar Socken kauft?
-Falls ja, dann aktiviere diese Option (icon:toggle-on[role="blue"]).
-Ein zusätzlicher Konfigurationsschritt wird eingeblendet. In diesem Schritt gibst du die Menge an, für die dieser Verkaufspreis gilt.
+|Soll der Verkaufspreis nur gelten, wenn ein Kunde mehrere Exemplare des Artikels kauft?
+Beispiel: du verkaufst Socken für 6 EUR pro Paar.
+Soll der Preis auf 5 EUR pro Paar reduziert werden, wenn ein Kunde 3 oder mehr Paar Socken kauft?
+
+icon:toggle-off[role="darkGrey"] = Der Verkaufspreis soll nicht erst ab einer bestimmten Menge gelten.
+Der zusätzliche Konfigurationsschritt *Mengenabhängigkeit* wird ausgeblendet, da er nicht relevant ist.
+
+icon:toggle-on[role="blue"] = Der Verkaufspreis soll erst ab einer bestimmten Menge gelten.
+Der zusätzliche Konfigurationsschritt *Mengenabhängigkeit* wird eingeblendet.
+In diesem Schritt gibst du die Menge an, für die der Verkaufspreis gilt.
+
+---
 
 *_Tipp_*: Füge noch weitere mengenabhängige Verkaufspreise hinzu, um eine Preisstaffel nach Mengen zu erstellen.
 
@@ -256,10 +275,20 @@ Mengenrabatte müssen auch in der Kundenklasse erlaubt sein.
 Öffne das Menü *Einrichtung » CRM » Kundenklassen » [Kundenklasse öffnen]*.
 Stelle sicher, dass die Einstellung *Mengenrabatt* auf *berücksichtigen* gesetzt ist.
 
-2+^| *Schritt: Name*
+|===
+
+--
+
+[.collapseBox]
+.*Schritt: Name*
+--
+
+[cols="1,4a"]
+|===
+|Einstellung |Erläuterung
 
 | *Interner Name*
-|Gib einen Namen für den Verkaufspreis ein.
+|Gib einen internen Namen für den Verkaufspreis ein.
 Dieser Name wird an verschiedenen Stellen innerhalb deines plentymarkets Backends angezeigt. Du wählst z.B. den Verkaufspreis anhand seines Namens, wenn du xref:artikel:preise.adoc#900[ihn mit einzelnen Artikeln verknüpfst].
 
 | *Externer Name*
@@ -269,7 +298,17 @@ Dieser Name wird an verschiedenen Stellen innerhalb deines plentymarkets Backend
 Das heißt: Es gibt derzeit keine Option im ShopBuilder-Widget, mit der du den externen Namen im plentyShop ausgeben kannst.
 Wenn du den externen Namen im plentyShop anzeigen möchtest, musst du den Code des Webshops entsprechend anpassen.
 
-2+^| *Schritt: Verfügbarkeiten*
+|===
+
+--
+
+[.collapseBox]
+.*Schritt: Verfügbarkeiten*
+--
+
+[cols="1,4a"]
+|===
+|Einstellung |Erläuterung
 
 | *Währungen*
 |In welche Währungen soll der Preis automatisch umgerechnet werden?
@@ -283,7 +322,7 @@ Vergewissere dich, dass du mit den im Menü *Einrichtung » Aufträge » Zahlung
 
 | *Verkaufskanäle*
 |Soll der Verkaufspreis nur für bestimmte Verkaufskanäle gelten? Möchtest du zum Beispiel den Artikel zu einem niedrigeren Preis in deinem plentyShop verkaufen als auf Amazon?
-Wähle alle Plattformen (icon:check-square[role="blue"]), für die dieser Verkaufspreis gelten soll.
+Wähle alle Plattformen (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
 *_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
 Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
@@ -294,54 +333,36 @@ xref:maerkte:ebay-einrichten.adoc#[Verknüpfe also im Voraus dein eBay- oder Ama
 
 | *Lieferländer*
 |Soll der Verkaufspreis nur für bestimmte Lieferländer gelten?
-Beispielsweise zahlst du wahrscheinlich unterschiedliche Steuersätze in unterschiedlichen Ländern. Aus diesem Grund willst du vielleicht einen Artikel in einigen Ländern zu einem etwas höheren Preis verkaufen, damit du die Differenz nicht selbst bezahlen musst.
-Wähle alle Länder (icon:check-square[role="blue"]), für die dieser Verkaufspreis gelten soll.
+Beispiel: du zahlst unterschiedliche Steuersätze in unterschiedlichen Ländern.
+Aus diesem Grund willst du einen Artikel in einigen Ländern zu einem etwas höheren Preis verkaufen, damit du die Differenz nicht selbst bezahlen musst.
+Wähle alle Länder (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
 | *Mandant*
-|Soll der Verkaufspreis nur für bestimmte Mandanten (Shops) gelten? Falls ja, dann wähle alle Shops (icon:check-square[role="blue"]), für die dieser Verkaufspreis gelten soll.
+|Soll der Verkaufspreis nur für bestimmte Mandanten (Shops) gelten? Falls ja, dann wähle alle Shops (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
 *_Hintergrund-Info_*: Diese Einstellung wird nur eingeblendet, wenn du mehrere Webshops, d.h. xref:webshop:mandanten-verwalten.adoc#[mehrere Mandanten], mit plentymarkets verwaltest.
 Da es möglich ist, über ein plentymarkets System mehrere unterschiedliche Geschäftsbereiche zu realisieren, musst du plentymarkets immer mitteilen, für welchen Webshop der Verkaufspreis gilt.
 |===
 
-[discrete]
-===== Erweiterte Einstellungen (nicht im Assistenten enthalten)
-
-Der Assistent führt dich durch die gängigsten Einstellungen für Verkaufspreise. Es gibt jedoch einige erweiterte Einstellungen, die optional auch konfiguriert werden können.
-
-. Öffne das Menü *Einrichtung » Artikel » Verkaufspreise*.
-. xref:artikel:preise.adoc#600[Suche] und öffne den Verkaufspreis.
-. Konfiguriere die erweiterten Einstellungen falls benötigt. Beachte <<table-sales-price-advanced-settings>>.
-. *Speichere* (terra:save[role="green"]) die Einstellungen.
-
-[[table-sales-price-advanced-settings]]
-.Folgende Einstellungen sind im Assistenten nicht enthalten
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *Abo-Interv.*
-|Diese Option ist relevant, wenn du Plugins auf dem plentyMarketplace auf Abonnementbasis anbietest.
-
-*_Hinweis_*: Diese Option hat aktuell weder eine Funktion für den plentyShop noch für das Scheduler oder Abonnement Modul.
-
-| *Position*
-|Positionsnummer eingeben.
-Wenn du mehrere xref:artikel:preise.adoc#900[Verkaufspreise mit einer Variante verknüpfst], dann werden die Verkaufspreise anhand ihrer Positionsnummer im Artikeldatensatz sortiert angezeigt.
-
-| *Darstellung*
-|Soll dieser Verkaufspreis automatisch mit neuen Artikeldatensätzen verknüpft werden?
-Falls ja, dann aktiviere die Option *Bei neuem Artikel immer anzeigen* (icon:check-square[role="blue"]).
-
-Wenn diese Einstellung deaktiviert ist, kannst du den xref:artikel:preise.adoc#900[Verkaufspreis trotzdem manuell zu Artikeln hinzufügen].
-|===
 --
-====
+
+[.collapseBox]
+.*Schritt: Zusammenfassung*
+--
+
+Hier siehst du eine Zusammenfassung deiner gewählten Einstellungen.
+
+. Klicke auf icon:check[role="green"] *Abschliessen*, wenn du mit den Angaben einverstanden bist. +
+→ Der Assistent wird beendet.
+. Wiederhole den Assistenten, bis du alle von deinem Unternehmen benötigten Verkaufspreise erstellt hast.
+. Anschließend xref:artikel:preise.adoc#900[verknüpfst] du die fertige Verkaufspreise mit einzelnen Varianten.
+
+--
 
 [#500]
 === Mit bestehenden Verkaufspreisen arbeiten
 
-Sobald du einen xref:artikel:preise.adoc#200[neuen Verkaufspreis erstellt] hast, wird er automatisch zur Übersicht im Menü *Einrichtung » Artikel » Verkaufspreise* hinzugefügt.
+Nachdem du einen xref:artikel:preise.adoc#200[Verkaufspreis erstellt] hast, wird er automatisch zur Übersicht im Menü *Einrichtung » Artikel » Verkaufspreise* hinzugefügt.
 
 [#600]
 ==== Verkaufspreise suchen
@@ -352,12 +373,10 @@ Verwende die Filter links, um die in der Übersicht rechts angezeigten Verkaufsp
 Verkaufspreise filtern:
 
 . Öffne das Menü *Einrichtung » Artikel » Verkaufspreise*.
-. Wähle die Filter links. Beachte <<table-filter-sales-prices>>.
+. Wähle die Filter links. Beachte die Tabelle.
 . Klicke auf *Suchen* (icon:search[role="blue"]). +
 → Die gefilterten Verkaufspreise werden in der Übersicht rechts angezeigt.
 
-[[table-filter-sales-prices]]
-.Verkaufspreise filtern
 [cols="1,4"]
 |===
 |Einstellung |Erläuterung
@@ -399,14 +418,12 @@ Verkaufspreise filtern:
 [#700]
 ==== Die Namen in mehreren Sprachen speichern
 
-Nachdem du einen xref:artikel:preise.adoc#200[neuen Verkaufspreis erstellt] hast, übersetze nach Bedarf den Namen des Verkaufspreises in die von dir verwendeten Sprachen.
+Nachdem du einen xref:artikel:preise.adoc#200[Verkaufspreis erstellt] hast, übersetze nach Bedarf den Namen des Verkaufspreises in die von dir verwendeten Sprachen.
 
 [.instruction]
 Verkaufspreis übersetzen:
 
-. Öffne das Menü *Einrichtung » Artikel » Verkaufspreise*.
-. xref:artikel:preise.adoc#600[Suche] und öffne den Verkaufspreis.
-. Wechsele in das Tab *Sprache*.
+. Öffne das Menü *Einrichtung » Artikel » Verkaufspreise » [Verkaufspreis öffnen] » Tab: Sprache*.
 . Gib den *internen Namen* in den benötigten Sprachen ein.
 . Gib den *externen Namen* in den benötigten Sprachen ein.
 . *Speichere* (terra:save[role="green"]) die Einstellungen.
@@ -414,15 +431,16 @@ Verkaufspreis übersetzen:
 [#900]
 === Verkaufspreis auf Produkte anwenden
 
-Verkaufspreise werden mit xref:artikel:struktur.adoc#[einzelnen Varianten] verknüpft, nicht mit dem Artikel als Ganzes.
-Wenn du also ein T-Shirt in S, M, L und XL verkaufst, kannst du entscheiden, ob die XL-Variante etwas teurer als die anderen sein soll.
+Verkaufspreise werden mit einzelnen Varianten verknüpft, nicht mit dem Artikel als Ganzes.
+Wenn du also ein T-Shirt in S, M, L und XL verkaufst, kannst du z.B. entscheiden, ob die XL-Variante etwas teurer als die anderen sein soll.
 
 Es gibt verschiedene Möglichkeiten, Verkaufspreise mit Varianten zu verknüpfen und die eigentlichen Geldpreise einzugeben:
 
-* Wenn du Preise für nur wenige Artikel speichern möchtest, dann empfiehlt es sich, die xref:artikel:artikel-verwalten.adoc#240[Verkaufspreise manuell zu verknüpfen und Geldbeträge einzugeben].
-* Wenn du Preise für viele Artikel speichern möchtest, dann empfiehlt es sich, die xref:artikel:import.adoc#800[Verkaufspreise und Geldbeträge zu importieren].
-Alternativ könntest du diese Daten mit Hilfe eines xref:willkommen:assistenten.adoc#[Assistenten] importieren.
-* Anstatt die Geldbeträge manuell einzugeben, willst du vielleicht, dass plentymarkets sie xref:artikel:preise.adoc#1000[automatisch für dich berechnet].
+* Wenn du Preise für nur wenige Artikel speichern möchtest, dann empfiehlt es sich, die Verkaufspreise xref:artikel:artikel-verwalten.adoc#240[manuell] zu verknüpfen und Geldbeträge einzugeben.
+//ToDo - wenn die neue Artikel-UI Standard ist, dann den Satz oben mit dem auskommentierten Satz unten austauschen
+//* Wenn du Preise für nur wenige Artikel speichern möchtest, dann empfiehlt es sich, die Verkaufspreise xref:artikel:verzeichnis.adoc#340[manuell] zu verknüpfen und Geldbeträge einzugeben.
+* Wenn du Preise für viele Artikel speichern möchtest, dann empfiehlt es sich, die Verkaufspreise und Geldbeträge zu xref:daten:elasticSync-artikel.adoc#2330[importieren].
+* Anstatt die Geldbeträge selbst anzugeben, kann plentymarkets sie für dich xref:artikel:preise.adoc#1000[berechnen].
 
 [#950]
 === Fragen und Antworten
@@ -485,8 +503,18 @@ Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen
 
 --
 
+[.collapseBox]
+.*Kann ich Verkaufspreise importieren, anstatt sie manuell zu erstellen?*
+--
+
+Nein.
+Verkaufspreise können nur manuell erstellt werden.
+Dies kann entweder im Einrichtungsmenü oder mit Hilfe eines Assistenten erfolgen.
+
+--
+
 [#1000]
-== Neue Preiskalkulation
+== Preiskalkulation
 
 Lass plentymarkets deine Preise für dich berechnen.
 Starte zum Beispiel mit dem Einkaufspreis und füge dann die Transportkosten, Lagerkosten und Steuern hinzu.
