--- a/docs/en-gb/modules/data/pages/ElasticSync.adoc
+++ b/docs/en-gb/modules/data/pages/ElasticSync.adoc
@@ -712,12 +712,12 @@ You can stop an import that you started. This function is only available while t
 
 [tabs]
 ====
-Cancelling an import::
+Stopping an import::
 +
 --
 
 [.instruction]
-Cancelling an import:
+Stopping an import:
 
 . Go to *Data » Status*. +
 → The status overview opens. +
@@ -728,17 +728,17 @@ Cancelling an import:
 → Only those data records are in the system that were already imported at the time you cancelled the import.
 --
 
-Cancelling a live import::
+Stopping a live import::
 +
 --
 
 [.instruction]
-Cancelling a live import:
+Stopping a live import:
 
 * In the tab *Data import*, click on material:close[] *Cancel import* at the top right. +
 → The import is stopped. +
 *_Important:_* Any data already imported will _not_ be deleted. If necessary, delete this data manually. +
-The import cannot be restarted. If necessary, start a new import.
+*_Tip:_* Go to *Data » Status* to resume the import. To do so, click on *Resume import*.
 --
 ====
 
