add email despatch chapter to crm faq page

--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -140,4 +140,16 @@ Further details about the new EmailBuilder can be found in our xref:crm:emailbui
 
 --
 
-// == Email despatch
+[#email-despatch]
+== Email despatch
+
+[.collapseBox]
+.Where can I deactivate the test mode/activate the live mode for the email despatch?
+--
+Go to *Setup » Assistants » Basic setup* and open the *Email accounts* assistant. Go to the *Login details* step. You can find in the area *Would you like to activate the live mode?* the checkbox *Activate live mode*.
+
+Activate (material:check_box[role=skyBlue]) this checkbox to activate the live mode. +
+If this checkbox is not activated (material:check_box_outline_blank[]), the test mode is activated. This means that in test mode, all emails are only sent to the saved email address. This makes sense in order to check the settings before switching to live mode.
+
+Activating the live mode applies globally for the entire email despatch in plentymarkets. Thus, it also applies for the email despatch via the messenger.
+--
