--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -101,7 +101,7 @@ Carrying out Amazon specific shipping profile settings:
 [#1500]
 == Activating the data exchange
 
-This chapter describes the settings that need to be configured in order to exchange data between your plentymarkets system and Amazon. You can import Amazon orders manually via a CSV file. Third, you will learn how to send shipping confirmations to Amazon, how to synchronise FBA stock and how to reset order reports from Amazon.
+This chapter describes the settings that need to be configured in order to exchange data between your plentymarkets system and Amazon. You can import Amazon orders manually via a CSV file. You will also learn how to send shipping confirmations to Amazon, how to synchronise FBA stock and how to reset order reports from Amazon.
 
 [#1900]
 === Importing Amazon orders
@@ -388,6 +388,54 @@ Only reports which were updated starting from this date and time will be display
 | *Updated to*
 | Enter a date in the format *D.M.YYYY* or select a date via the calendar (material:today[]). You can also enter a time in the *Updated time to* line or select a time via (material:schedule[]). +
 Only reports which were updated up until this date and time will be displayed. Reports which were updated later will not be displayed.
+|===
+
+[#request-reports]
+==== Requesting reports
+
+In the *Setup » Markets » Amazon » Reports » Request* menu, you can request the creation of Amazon reports.
+
+*_Notes on requesting reports:_*
+
+* You can only request reports of a period of a maximum of one week.
+
+* The timeframe of the requested report should be as short as possible, as processing big reports can take more time due to the amount of data.
+
+* The number of requests is limited. For example, you can only request certain report types 2 or 5 times per day.
+
+[.instruction]
+Requesting a report:
+
+. Go to *Setup » Markets » Amazon » Reports » Request*.
+. Carry out the settings. Pay attention to the explanations given in <<#table-request-report>>.
+. Click on *Request*. +
+→ The requested report is created by Amazon. As soon as the report is available, you can retrieve it in the *Setup » Markets » Amazon » Reports » Processing* menu in your plentymarkets system. +
+→ It can take several minutes until the report is available in your system.
+
+[[table-request-report]]
+.Requesting the creation of a report
+[cols="1,3a"]
+|===
+| Setting | Explanation
+
+| *Start date* (mandatory)
+| Enter a date in the format *DD.MM.YYYY* or select a date via the calendar (material:today[]).
+
+| *Start time* (mandatory)
+| Enter a time or select it via (material:schedule[]).
+
+| *End date*
+| Enter a date in the format *DD.MM.YYYY* or select a date via the calendar (material:today[]).
+
+| *End time*
+| Enter a time or select it via (material:schedule[]).
+
+| *Seller ID*
+| Select the seller ID of the Amazon seller account that you want to requests reports for.
+
+| *Report type*
+| Select the report type. If you hover over a report type in the drop-down list, a tooltip with information about this report type is shown. +
+*_Note:_* The number of requests is limited. After you selected a report type, you will see how often per day you can request it below the report.
 |===
 
 [#2700]
