--- a/docs/de-de/modules/auftraege/pages/abonnement.adoc
+++ b/docs/de-de/modules/auftraege/pages/abonnement.adoc
@@ -81,7 +81,8 @@ Im gleichen Menübereich unter *Einrichtung » Aufträge » Auftragstypen » Abo
 Klicke auf die Schaltfläche *Durchlaufvorschau* und eine Auflistung *Fälliger Abonnements* wird generiert. Diese sind aufsteigend nach der Auftrags-ID sortiert.
 Zudem siehst du auf einen Blick die Laufzeit der Abonnements sowie den letzten und nächsten Durchlauf.
 
-Die Fälligkeit der Abonnements wird systemseitig _einmal täglich_ abgefragt und angestoßen. Die *Durchlaufvorschau* bietet dir nicht nur die Möglichkeit zur Übersicht und Überprüfung anstehender Abonnements, du kannst fällige Abonnements hier auch selbst sofort anstoßen. Beachte dabei, dass hier _alle auf einmal und sofort_ angestoßen werden, eine Auswahl einzelner ist in dieser Ansicht nicht möglich.
+Die Fälligkeit der Abonnements wird systemseitig _einmal täglich_ abgefragt und angestoßen. Die *Durchlaufvorschau* bietet dir nicht nur die Möglichkeit zur Übersicht und Überprüfung anstehender Abonnements, du kannst fällige Abonnements
+hier auch selbst sofort anstoßen. Beachte dabei, dass hier _alle auf einmal und sofort_ angestoßen werden, eine Auswahl einzelner ist in dieser Ansicht nicht möglich.
 Wie du manuelle Durchläufe für einzelne Abonnements in der Detailansicht jedes Abonnements durchführst, wird weiter unten im Kapitel xref:auftraege:abonnement.adoc#800[Abgeschlossene Aufträge: Durchläufe] ausführlicher erläutert.
 
 Werden dir also fällige Abonnements angezeigt, dann klicke für den sofortigen Anstoß rechts unten in der Tabelle auf *Durchlaufvorschau* und warte kurz.
