CHANGE pages in preparation for the new item ui

--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -43,7 +43,7 @@ Während des Prozesses vergibst du den Verkaufspreisen eindeutige Namen und ents
 Lege nicht mehrere Verkaufspreise mit exakt denselben Bedingungen an.
 Dies führt zu Fehlern.
 
-* *_Beispiel_*: Du hast zwei Verkaufspreise, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten.
+* *_Beispiel_*: Du hast zwei Verkaufspreise, die beide für B2B-Kunden, deinen Webshop und das Lieferland Deutschland, gelten.
 * *_Auswirkung_*: plentymarkets weiß nicht, welcher Verkaufspreis verwendet werden soll.
 plentymarkets verwendet zufällig einen der beiden Verkaufspreise, da beide gleichermaßen gelten.
 ====
@@ -155,11 +155,15 @@ Falls ja, dann wähle alle Kundenklassen (icon:check-square[role="blue"]), für 
 
 ---
 
-*_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
-Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
-plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
-
 *_Hinweis_*: xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
+
+*_Häufige Fehlerquelle_*:
+Lege nicht mehrere Verkaufspreise mit exakt denselben Bedingungen an.
+Dies führt zu Fehlern.
+
+* *_Beispiel_*: Du hast zwei Verkaufspreise, die beide für B2B-Kunden, deinen Webshop und das Lieferland Deutschland, gelten.
+* *_Auswirkung_*: plentymarkets weiß nicht, welcher Verkaufspreis verwendet werden soll.
+plentymarkets verwendet zufällig einen der beiden Verkaufspreise, da beide gleichermaßen gelten.
 
 | *Land*
 |Soll der Verkaufspreis nur für bestimmte Lieferländer gelten?
@@ -171,12 +175,18 @@ Wähle alle Länder (icon:check-square[role="blue"]), für die der Verkaufspreis
 |Soll der Verkaufspreis nur für bestimmte Verkaufskanäle gelten? Möchtest du zum Beispiel den Artikel zu einem niedrigeren Preis in deinem plentyShop verkaufen als auf Amazon?
 Wähle alle Plattformen (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
-*_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
-Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
-plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
+---
 
 *_Hinweis_*: Wenn du eBay oder Amazon wählst, wird die entsprechende Kontoeinstellung weiter unten eingeblendet. Hier teilst du plentymarkets mit, für welches eBay- oder Amazon-Konto der Verkaufspreis gelten soll.
 xref:maerkte:ebay-einrichten.adoc#[Verknüpfe also im Voraus dein eBay- oder Amazon-Konto mit plentymarkets].
+
+*_Häufige Fehlerquelle_*:
+Lege nicht mehrere Verkaufspreise mit exakt denselben Bedingungen an.
+Dies führt zu Fehlern.
+
+* *_Beispiel_*: Du hast zwei Verkaufspreise, die beide für B2B-Kunden, deinen Webshop und das Lieferland Deutschland, gelten.
+* *_Auswirkung_*: plentymarkets weiß nicht, welcher Verkaufspreis verwendet werden soll.
+plentymarkets verwendet zufällig einen der beiden Verkaufspreise, da beide gleichermaßen gelten.
 
 | *Amazon-Konten*
 |Teile plentymarkets mit, für welches Amazon-Konto der Verkaufspreis gelten soll.
@@ -248,11 +258,15 @@ In diesem Schritt gibst du die Kundenklasse an, für die der Verkaufspreis gilt.
 
 ---
 
-*_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
-Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
-plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
-
 *_Hinweis_*: xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
+
+*_Häufige Fehlerquelle_*:
+Lege nicht mehrere Verkaufspreise mit exakt denselben Bedingungen an.
+Dies führt zu Fehlern.
+
+* *_Beispiel_*: Du hast zwei Verkaufspreise, die beide für B2B-Kunden, deinen Webshop und das Lieferland Deutschland, gelten.
+* *_Auswirkung_*: plentymarkets weiß nicht, welcher Verkaufspreis verwendet werden soll.
+plentymarkets verwendet zufällig einen der beiden Verkaufspreise, da beide gleichermaßen gelten.
 
 | *Mengenabhängigkeit*
 |Soll der Verkaufspreis nur gelten, wenn ein Kunde mehrere Exemplare des Artikels kauft?
@@ -324,12 +338,18 @@ Vergewissere dich, dass du mit den im Menü *Einrichtung » Aufträge » Zahlung
 |Soll der Verkaufspreis nur für bestimmte Verkaufskanäle gelten? Möchtest du zum Beispiel den Artikel zu einem niedrigeren Preis in deinem plentyShop verkaufen als auf Amazon?
 Wähle alle Plattformen (icon:check-square[role="blue"]), für die der Verkaufspreis gelten soll.
 
-*_Häufige Fehlerquelle_*: Um Fehler zu vermeiden, sollst du nicht mehrere Verkaufspreise mit genau denselben Bedingungen, d.h. mit genau demselben Einstellungs-Mix, konfigurieren.
-Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
-plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
+---
 
 *_Hinweis_*: Wenn du eBay oder Amazon wählst, wird ein zusätzlicher Konfigurationsschritt eingeblendet. In diesem Schritt teilst du plentymarkets mit, für welches eBay- oder Amazon-Konto der Verkaufspreis gelten soll.
 xref:maerkte:ebay-einrichten.adoc#[Verknüpfe also im Voraus dein eBay- oder Amazon-Konto mit plentymarkets].
+
+*_Häufige Fehlerquelle_*:
+Lege nicht mehrere Verkaufspreise mit exakt denselben Bedingungen an.
+Dies führt zu Fehlern.
+
+* *_Beispiel_*: Du hast zwei Verkaufspreise, die beide für B2B-Kunden, deinen Webshop und das Lieferland Deutschland, gelten.
+* *_Auswirkung_*: plentymarkets weiß nicht, welcher Verkaufspreis verwendet werden soll.
+plentymarkets verwendet zufällig einen der beiden Verkaufspreise, da beide gleichermaßen gelten.
 
 | *Lieferländer*
 |Soll der Verkaufspreis nur für bestimmte Lieferländer gelten?
@@ -607,12 +627,16 @@ Formel schreiben:
 | *Einkaufspreis*
 |Entspricht dem Netto-Einkaufspreis unter: +
 xref:artikel:artikel-verwalten.adoc#280[Tab: Einstellungen » Bereich: Kosten » Option: EK netto]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#190[Artikel » Artikel-UI » [Variante öffnen\] » Element: Kosten » Option: Einkaufspreis netto]
 
 Abhängig von den Einstellungen im Menü *Einrichtung » Waren » Warenbestand » Wareneingang* wird der Einkaufspreis xref:warenwirtschaft:wareneingaenge-verwalten.adoc#300[berechnet oder manuell gepflegt].
 
 | *Gld. Einkaufspreis*
 |Entspricht dem gleitenden Durchschnitts-Einkaufspreis unter: +
 xref:artikel:artikel-verwalten.adoc#280[Tab: Einstellungen » Bereich: Kosten » Option: GLD EK netto]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#190[Artikel » Artikel-UI » [Variante öffnen\] » Element: Kosten » Option: Gleitender Durchschnittseinkaufspreis netto]
 
 Der GLD EK netto wird bei jedem Wareneingang neu aus den Einkaufspreisen aller im Lager verfügbaren Bestände einer Variante berechnet.
 
@@ -621,11 +645,15 @@ Der GLD EK netto wird bei jedem Wareneingang neu aus den Einkaufspreisen aller i
 | *Transportkosten*
 |Entspricht den Netto-Transportkosten unter: +
 xref:artikel:artikel-verwalten.adoc#280[Tab: Einstellungen » Bereich: Kosten » Option: Transport netto]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#190[Artikel » Artikel-UI » [Variante öffnen\] » Element: Kosten » Option: Transportkosten]
 
 | *Mehrwertsteuer +
 (Standardmandant)*
 |Entspricht dem prozentualen Umsatzsteuersatz unter: +
 xref:artikel:artikel-verwalten.adoc#280[Tab: Einstellungen » Bereich: Kosten » Option: Umsatzsteuer]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#190[Artikel » Artikel-UI » [Variante öffnen\] » Element: Kosten » Option: Umsatzsteuer]
 
 *_Hinweis_*:
 In der Variante wird der Steuersatz als Prozentzahl gespeichert.
@@ -635,6 +663,8 @@ Beispiel: `7%` wird zu `1,07` durch `(1 + Steuersatz / 100)`.
 | *Zoll*
 |Entspricht dem Zoll-Prozentsatz unter: +
 xref:artikel:artikel-verwalten.adoc#280[Tab: Einstellungen » Bereich: Kosten » Option: Zoll]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#190[Artikel » Artikel-UI » [Variante öffnen\] » Element: Kosten » Option: Zoll in %]
 
 *_Hinweis_*:
 In der Variante wird der Zollaufschlag als Prozentzahl gespeichert.
@@ -644,6 +674,8 @@ Beispiel: `11,2%` wird zu `1,112` durch `(1 + Zollaufschlag / 100)`.
 | *Betriebskosten*
 |Entspricht dem Prozentsatz der Betriebskosten unter: +
 xref:artikel:artikel-verwalten.adoc#280[Tab: Einstellungen » Bereich: Kosten » Option: Betriebskosten]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#190[Artikel » Artikel-UI » [Variante öffnen\] » Element: Kosten » Option: Betriebskosten in %]
 
 *_Hinweis_*:
 In der Variante werden die Betriebskosten als Prozentzahl gespeichert.
@@ -653,11 +685,15 @@ Beispiel: `7%` wird zu `1,07` durch `(1 + Betriebskosten / 100)`.
 | *Lagerkosten*
 |Entspricht den Netto-Lagerkosten unter: +
 xref:artikel:artikel-verwalten.adoc#280[Tab: Einstellungen » Bereich: Kosten » Option: Lager netto]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#190[Artikel » Artikel-UI » [Variante öffnen\] » Element: Kosten » Option: Lagerkosten]
 
 | *Portoaufschlag 1*; +
 *Portoaufschlag 2*
 a|Entspricht dem Portoaufschlag unter: +
 xref:artikel:artikel-verwalten.adoc#290[Tab: Einstellungen » Bereich: Versand » Option: Portoaufschlag 1 und 2]
+//ToDo - sobald die neue Artikel UI Standard ist, dann den Menüpfad austauschen
+//xref:artikel:verzeichnis.adoc#200[Artikel » Artikel-UI » [Variante öffnen\] » Element: Versand » Option: Portoaufschlag 1 und 2]
 
 Dies ist eine Gebühr, die zusätzlich zu den normalen Versandkosten erhoben werden soll. Solche Portoaufschläge bieten sich für größere oder sperrige Artikel an, deren Versand teurer ist.
 
@@ -1020,45 +1056,40 @@ Klicke auf eine Varianten-ID, um die Variante zu öffnen und den Fehler zu beheb
 [#2100]
 === Kalkulation auf Produkte anwenden
 
-[tabs]
-====
-Manuell::
-+
+Es gibt verschiedene Möglichkeiten, eine Preiskalkulation auf Produkte anzuwenden:
+
+* Wenn du die Preiskalkulation nur auf wenige Produkte anwenden willst, dann empfiehlt es sich, dies manuell zu tun.
+* Wenn du die Preiskalkulation auf viele Produkte anwenden willst, dann empfiehlt es sich, dies mit Hilfe des Imports oder der Gruppenfunktion/Stapelverarbeitung zu tun.
+
+[.collapseBox]
+.*Manuell*
 --
-Wenn du die Preiskalkulation für nur wenige Artikel speichern möchtest, dann empfiehlt es sich, die Preiskalkulation manuell zu verknüpfen.
 
 include::page$import-export-anlage-verzeichnis.adoc[tag=preiskalkulation-anwenden]
 
---
-Import::
-+
---
-Wenn du die Preiskalkulation für viele Artikel speichern möchtest, dann empfiehlt es sich, die Preiskalkulation xref:daten:ElasticSync.adoc#[per Import] zu verknüpfen.
-Verwende dazu den xref:daten:elasticSync-artikel.adoc#[Import-Typ Artikel] und das Zuordnungsfeld *Varianten / Preiskalkulation UUID*.
-
-Gib die UUID der Preiskalkulation in die CSV-Datei ein.
-Dadurch wird die Preiskalkulation auf die für die Variante gespeicherten Preise angewendet.
-
-*_Tipp_*:
-Die Preiskalkulation-UUID kannst du kopieren.
-Öffne dazu das Menü *Artikel » Preiskalkulation » [Preiskalkulation öffnen]*.
-Klicke auf die UUID unten links.
-Die UUID wird in die Zwischenablage kopiert.
-
-*_Importiere die Preiskalkulation-UUID zum Schluss_*:
-Stell dir vor, deine Preise werden nach der folgenden Formel berechnet: `(EK + Transport) * 1.07`.
-In diesem Fall musst du zuerst den Einkaufspreis und die Transportkosten importieren und danach die Preiskalkulation.
-Sonst verfügt plentymarkets nicht über alle nötigen Informationen, um den Preis korrekt zu berechnen.
-
-. xref:daten:ElasticSync.adoc#1500[Erstelle eine Zuordnung], die die Preisbestandteile Einkaufspreis und Transportkosten importiert.
-. xref:daten:ElasticSync.adoc#1500[Erstelle eine weitere Zuordnung] im selben Import, die die Preiskalkulation-UUID importiert. +
-→ Die Zuordnungen werden nacheinander abgearbeitet.
+//ToDo - wenn die Artikel UI Standard ist, dann include-Datei austauschen
+//include::page$verzeichnis.adoc[tag=link-pricecalculation-variation]
 
 --
-Gruppenfunktion oder Stapelverarbeitung::
-+
+
+[.collapseBox]
+.*Import*
 --
-Wenn du die Preiskalkulation für viele Artikel speichern möchtest, dann empfiehlt es sich, die Preiskalkulation per Varianten-Gruppenfunktion oder Stapelverarbeitung zu verknüpfen.
+
+Die Preiskalkulation kann xref:daten:ElasticSync.adoc#[per Import] verknüpft werden.
+Verwende dazu den Import-Typ *Artikel* und das Zuordnungsfeld xref:daten:elasticSync-artikel.adoc#590[Varianten / Preiskalkulation UUID].
+
+---
+
+include::daten:page$elasticSync-artikel.adoc[tag=link-pricecalculation-import]
+
+--
+
+[.collapseBox]
+.*Gruppenfunktion oder Stapelverarbeitung*
+--
+
+Die Preiskalkulation kann per Varianten-Gruppenfunktion oder Stapelverarbeitung verknüpft werden.
 
 [discrete]
 ===== Varianten-Gruppenfunktion
@@ -1077,7 +1108,6 @@ include::page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
 . Klicke auf terra:execute[role="darkGrey"] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
 
 --
-====
 
 [IMPORTANT]
 .Nur eine Preiskalkulation pro Variante
