--- a/docs/en-gb/modules/data/pages/catalogue-format-order.adoc
+++ b/docs/en-gb/modules/data/pages/catalogue-format-order.adoc
@@ -892,7 +892,7 @@ This chapter lists all of the filters that you can use to limit which orders and
 
 [[catalogue-order-filters]]
 .Filters for order export
-[cols="1,3"]
+[cols="1,3a"]
 |====
 |Filter |Explanation
 
