--- a/docs/en-gb/modules/data/pages/item.adoc
+++ b/docs/en-gb/modules/data/pages/item.adoc
@@ -1355,6 +1355,126 @@ There is also an “and” filter. xref:data:catalogues-item.adoc#intable-tags-a
 | *Variation has child variations*
 |Limits the export to variations that either have sub-variations or that do not have sub-variations.
 
+| *Sales price updated at*
+|Limits the export to variations whose sales price was last modified on a specific date.
+
+*_Formatting_*:
+Enter the date in the format `DD.MM.YYYY`.
+Alternatively, click on the calendar symbol (icon:calendar-o[role="darkGrey"]) if you would prefer to choose the date from the calendar.
+
+[.collapseBox]
+.*Operators in the left drop-down list*
+--
+
+[cols="1,4a"]
+!===
+!Operator !Explanation
+
+! *Today*
+!Only variations that were modified today will be exported.
+
+! *Last*
+!Enter a number of days into the field on the right.
+Only variations that were modified within the last [number] days will be exported.
+
+! *Period*
+!Enter a time period into the field on the right.
+Only variations that were modified during this time period will be exported.
+
+! *=*
+!Is equal to.
+Enter a date into the field on the right.
+Only variations that were modified on this date will be exported.
+
+! *\!=*
+!Is not equal.
+Enter a date into the field on the right.
+Only variations that were _not_ modified on this date will be exported.
+
+! *>*
+!Greater than.
+Enter a date into the field on the right.
+Only variations that were modified _after_ this date will be exported.
+
+! *>=*
+!Greater than or equal to.
+Enter a date into the field on the right.
+Only variations that were modified _on or after_ this date will be exported.
+
+! *<*
+!Less than.
+Enter a date into the field on the right.
+Only variations that were modified _before_ this date will be exported.
+
+! *\<=*
+!Less than or equal to.
+Enter a date into the field on the right.
+Only variations that were modified _on or before_ this date will be exported.
+
+!===
+
+--
+
+| *Stock updated at*
+|Limits the export to variations whose stock was last modified on a specific date.
+
+*_Formatting_*:
+Enter the date in the format `DD.MM.YYYY`.
+Alternatively, click on the calendar symbol (icon:calendar-o[role="darkGrey"]) if you would prefer to choose the date from the calendar.
+
+[.collapseBox]
+.*Operators in the left drop-down list*
+--
+
+[cols="1,4a"]
+!===
+!Operator !Explanation
+
+! *Today*
+!Only variations that were modified today will be exported.
+
+! *Last*
+!Enter a number of days into the field on the right.
+Only variations that were modified within the last [number] days will be exported.
+
+! *Period*
+!Enter a time period into the field on the right.
+Only variations that were modified during this time period will be exported.
+
+! *=*
+!Is equal to.
+Enter a date into the field on the right.
+Only variations that were modified on this date will be exported.
+
+! *\!=*
+!Is not equal.
+Enter a date into the field on the right.
+Only variations that were _not_ modified on this date will be exported.
+
+! *>*
+!Greater than.
+Enter a date into the field on the right.
+Only variations that were modified _after_ this date will be exported.
+
+! *>=*
+!Greater than or equal to.
+Enter a date into the field on the right.
+Only variations that were modified _on or after_ this date will be exported.
+
+! *<*
+!Less than.
+Enter a date into the field on the right.
+Only variations that were modified _before_ this date will be exported.
+
+! *\<=*
+!Less than or equal to.
+Enter a date into the field on the right.
+Only variations that were modified _on or before_ this date will be exported.
+
+!===
+
+--
+
 |===
 
 [#180]
