--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1857,6 +1857,8 @@ IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:preise.adoc#[Ver
 
 IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:preise.adoc#[Verkaufspreise] und xref:artikel:preise.adoc#1000[Preiskalkulationen] bereits erstellt hast.
 
+//tag::link-pricecalculation-variation[]
+
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
 . Wähle eine zuvor erstellte *Preiskalkulation* aus der Dropdown-Liste aus.
 . *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
@@ -1865,6 +1867,8 @@ Klicke dazu auf icon:ellipsis-v[role="darkGrey"] und dann auf material:refresh[r
 → Die Verkaufspreise und automatisch berechnete Geldbeträge werden als Tabelle dargestellt.
 
 //gif
+
+//end::link-pricecalculation-variation[]
 
 --
 
