--- a/docs/en-gb/modules/data/pages/export-standard-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-standard-formats.adoc
@@ -693,8 +693,6 @@ Removing data fields from export:
 
 You can use filters to limit the data that should be exported.
 
-* Different filters are available for different standard formats. The available filters are explained on the manual pages of each standard format.
-
 [.instruction]
 Adding a filter:
 
@@ -705,6 +703,14 @@ Adding a filter:
 → The filter overview opens.
 . Select a filter from the drop-down list. +
 *_Tip:_* Different filters are available for different standard formats.
+You can find descriptions of the individual filters here:
+* xref:data:item.adoc#170[Item (New)]
+* xref:data:catalogue-format-order.adoc#400[Orders]
+* xref:data:manufacturers.adoc#200[Manufacturers]
+* xref:data:exporting-warehouse-data.adoc#20[Warehouses]
+* xref:data:exporting-stocks.adoc#20[Stocks]
+* xref:data:exporting-stock-movements.adoc#20[Stock movements]
+* xref:data:exporting-payments.adoc#20[Payments]
 . On the right, click on *Add filter* (material:add[]). +
 → The filter is added.
 . If an operator is available for this filter:
