--- a/docs/en-gb/modules/orders/pages/design-order-view.adoc
+++ b/docs/en-gb/modules/orders/pages/design-order-view.adoc
@@ -55,8 +55,8 @@ You can create the following order types as child orders: +
 * Partial delivery
 * Advance order
 
-** For all items: The maximum amount of all items is automatically added to the shopping cart.
-** For specific items: The table of the shopping cart will be empty at first, which means that the desired items have to be added manually.
+** For all order items: The maximum amount of all items is automatically added to the shopping cart.
+** For specific order items: The table of the shopping cart will be empty at first, which means that the desired items have to be added manually.
 ** Split automatically (only for delivery orders): The items are automatically split according to the settings.
 
 | *Book outgoing items*
@@ -126,7 +126,6 @@ In general, orders should not be deleted. Errors can occur when orders are delet
 | *Reload order*
 | material:refresh[]
 |Updates the order and thus shows possible changes from other users that have worked on the same order simultaneously. Save your changes before reloading the order.
-
 |===
 
 [TIP]
@@ -236,7 +235,7 @@ This is a default column.
 |Shows the VAT that is applied for this order. +
 This is a default column.
 
-| *Order status*
+| *tatus*
 |Shows the processing status of the order. +
 This is a default column.
 
@@ -339,6 +338,10 @@ This is a default column.
 
 | *Shipping service provider*
 |Shows the shipping service provider. +
+This is an optional column.
+
+| *Package numbers*
+|Shows the order’s package numbers separated by comma. +
 This is an optional column.
 
 | *External order ID*
