--- a/docs/en-gb/modules/orders/pages/order-type-credit-note.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-credit-note.adoc
@@ -33,7 +33,7 @@ Creating a credit note order:
 . Open the order for which a credit note should be created.
 . At the top, click on *Create orders* (material:shopping_cart[]) > *Credit note*.
 . Select an option. Note <<table-create-{ordertype}>>.
-. In case you selected the option *For specific items*, carry out the settings. Pay attention to the explanations given in <<table-create-credit-note>>.
+. In case you selected the option *For specific order items*, carry out the settings. Pay attention to the explanations given in <<table-create-credit-note>>.
 . *Save* (material:save[]) the settings. +
 → The credit note order is created.
 
