--- a/docs/en-gb/modules/orders/pages/order-type-repair.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-repair.adoc
@@ -43,7 +43,7 @@ Proceed as described below to create a repair:
 . Carry out the search (material:search[]) to display orders.
 . Open the return for which you want to create a repair.
 . In the tool bar at the top, click on *Create orders* > *Repair*.
-. Select the option *For specific items*. +
+. Select the option *For specific order items*. +
 → The overview for creating the repair opens.
 . Carry out the settings. Pay attention to the explanations given in <<table-settings-repair>>.
 . *Save* (material:save[]) the settings. +
