--- a/docs/en-gb/modules/orders/pages/order-type-return.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-return.adoc
@@ -51,7 +51,7 @@ Proceed as follows to register a return:
 . Carry out the search (material:search[]) to display orders.
 . Open the sales order or the warranty for which a return should be created.
 . At the top, click on *Create orders* (material:shopping_cart[]) > *Return*.
-. Select the option *For specific items*. +
+. Select the option *For specific order items*. +
 → The overview for creating the return opens.
 . Carry out the settings. Pay attention to the explanations given in <<table-settings-return>>.
 . *Save* (material:save[]) the settings. +
