--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -426,13 +426,13 @@ Bericht anfordern:
 | Einstellung | Erläuterung
 
 | *Startdatum* (Pflichtfeld)
-| Datum im Format *D.M.YYYY* eingeben oder über den Kalender (material:today[]) wählen.
+| Datum im Format *DD.MM.YYYY* eingeben oder über den Kalender (material:today[]) wählen.
 
 | *Startzeitpunkt* (Pflichtfeld)
 | Uhrzeit eingeben oder über (material:schedule[]) wählen.
 
 | *Enddatum*
-| Datum im Format *D.M.YYYY* eingeben oder über den Kalender (material:today[]) wählen.
+| Datum im Format *DD.MM.YYYY* eingeben oder über den Kalender (material:today[]) wählen.
 
 | *Endzeitpunkt*
 | Uhrzeit eingeben oder über (material:schedule[]) wählen.
