--- a/docs/en-gb/modules/orders/pages/design-order-view.adoc
+++ b/docs/en-gb/modules/orders/pages/design-order-view.adoc
@@ -235,7 +235,7 @@ This is a default column.
 |Shows the VAT that is applied for this order. +
 This is a default column.
 
-| *Status*
+| *Order status*
 |Shows the processing status of the order. +
 This is a default column.
 
