--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -654,16 +654,16 @@ Passe den Namen bei Bedarf im Eingabefeld an.
 |Die Umsatzsteuer wird in % angezeigt. +
 Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern.
 
-| *Gewicht*
-|Zeigt das Gewicht des Artikels an. +
+| *Gewicht (g)*
+|Zeigt das Gewicht des Artikels in Gramm an. +
 |Passe das Gewicht bei Bedarf im Eingabefeld an.
 
-| *Länge*
-|Zeigt die Länge des Artikels an. +
+| *Länge (mm)*
+|Zeigt die Länge des Artikels in mm an. +
 |Passe die Länge bei Bedarf im Eingabefeld an.
 
-| *Breite*
-|Zeigt die Breite des Artikels an. +
+| *Breite (mm)*
+|Zeigt die Breite des Artikels in mm an. +
 |Passe die Breite bei Bedarf im Eingabefeld an.
 
 | *Aktionen*
