--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -650,19 +650,19 @@ Passe den Namen bei Bedarf im Eingabefeld an.
 | *Lager*
 |Zeigt das Lager an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste.
 
-| *USt. (%)*
+| *USt. [%]*
 |Die Umsatzsteuer wird in % angezeigt. +
 Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern.
 
-| *Gewicht (g)*
+| *Gewicht [g]*
 |Zeigt das Gewicht des Artikels in Gramm an. +
 |Passe das Gewicht bei Bedarf im Eingabefeld an.
 
-| *Länge (mm)*
+| *Länge [m]*
 |Zeigt die Länge des Artikels in mm an. +
 |Passe die Länge bei Bedarf im Eingabefeld an.
 
-| *Breite (mm)*
+| *Breite [mm]*
 |Zeigt die Breite des Artikels in mm an. +
 |Passe die Breite bei Bedarf im Eingabefeld an.
 
