--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -30,7 +30,8 @@ Using group functions:
 
 [TIP]
 .Select default group functions
-In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order overview you can determine *default group functions* that become directly visible when selecting orders. All remaining group functions will automatically be added to the context menu (material:more_vert[]).
+In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order overview, you can determine *default group functions* that become directly visible when selecting orders.
+ All remaining group functions will automatically be added to the context menu (material:more_vert[]).
 
 [[table-order-group-functions]]
 .Group functions for orders
@@ -81,7 +82,7 @@ In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order ove
 
 | *Create document*
 |material:note_add[]
-|Creates a document for all selected orders. Select a document type from the drop-down list and enter a creation date for the document or select a date from the calendar (material:today[]).
+|Creates a document for all selected orders. Select a document type from the drop-down list. Enter a creation date for the document or select a date from the calendar (material:today[]).
 
 |===
 
@@ -602,7 +603,8 @@ You can open the variation by clicking on the ID.
 |Shows the number of the variation.
 
 | *Item name*
-|Shows the name of the item.
+|Shows the name of the item. +
+Edit the name in the input field if needed.
 
 | *Attributes*
 |Shows the attributes.
@@ -648,9 +650,24 @@ You can edit the data field gross price via material:edit[]. The net price will 
 | *Warehouse*
 |Shows the warehouse. Select another warehouse from the drop-down list, if required.
 
-|*VAT [%]*
+| *VAT [%]*
 |The VAT is shown in %. +
 19.00 % are preset for the VAT. You can change the VAT rate in the drop-down list.
+
+| *Weight [g]*
+|Shows the item weight in grams. +
+|Edit the weight in the input field if needed.
+
+| *Length [mm]*
+|Shows the length of the item in mm. +
+|Edit the length in the input field if needed.
+
+| *Width [mm]*
+|Shows the width of the item in mm. +
+|Edit the width in the input field if needed.
+
+| *Actions*
+|Provides further actions for the items in the context menu (material:more_vert[]) on the right.
 
 2+^| *Delete order items*
 
